added new translation keys for SLCA

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,5 +1,6 @@
-#Mon Dec 15 12:34:01 CET 2014
+#Wed Aug 26 12:29:55 CEST 2015
 AccessAndUseRestrictions=Access and use restrictions
+ActivityVariable=Activity variable
 Actor=Actor
 Actors=Actors
 Add=Add
@@ -57,6 +58,7 @@ Collapse=collapse
 CollapseAll=Collapse all
 ColumnSeparator=Column separator
 Comma=Comma
+Comment=Comment
 Complete=Complete
 CompleteReferenceData=Complete reference data
 Component=Component
@@ -111,6 +113,7 @@ DataCollectionPeriod=Data collection period
 DataCompleteness=Data completeness
 DataDocumentor=Data documentor
 DataGenerator=Data generator
+DataQuality=DataQuality
 DataSelection=Data selection
 DataSetOtherEvaluation=Data set other evaluation
 DataSetOwner=Data set owner
@@ -164,6 +167,7 @@ Error=Error
 ErrorPopupMessage=See the log-file for further information
 ErrorPopupTitle=An unexpected error occured
 EvaluateLocations=Evaluate for existing locations
+EvaluationScheme=Evaluation scheme
 Example=Example
 ExcelExport=Excel Export
 Expand=expand
@@ -338,6 +342,7 @@ NewProcess=New process
 NewProductSystem=New product system
 NewProject=New project
 NewSection=New section
+NewSocialIndicator=New social indicator
 NewSource=New source
 NewUnitGroup=New unit group
 No=No
@@ -425,9 +430,11 @@ Projects=Projects
 Properties=Properties
 Publication=Publication
 QuantitativeReference=Quantitative reference
+Quantity=Quantity
 QuickResults=Quick results
-RecalculateQuestionTitle=Recalculate
+RawValue=Raw value
 RecalculateQuestionText=Do you want the default value and uncertainty to be recalculated with the selected data source?
+RecalculateQuestionTitle=Recalculate
 ReconnectProcesslink=reconnect processlink
 Reference=Reference
 ReferenceFlowProperty=Reference flow property
@@ -459,6 +466,7 @@ Results=Results
 ResultsOf=Results of
 ResultsOfProject=Results of project\:
 Reviewer=Reviewer
+RiskLevel=Risk level
 Route=Route
 RunCalculation=Run calculation
 SamplingProcedure=Sampling procedure
@@ -497,13 +505,18 @@ Show=show
 ShowFormulas=Show formulas
 ShowOutline=Show outline
 ShowValues=Show values
-Showviews=Show &views
 Showperspectives=Show &perspectives
+Showviews=Show &views
 SimaProCSVImport=SimaPro CSV Import
 SingleAmount=Single amount
 SingleScore=Single score
 SingleScoreBarChart=Single score bar chart
 SingleScoreTable=Single score table
+SocialAspect=Social aspect
+SocialAspects=Social aspects
+SocialAssessment=Social assessment
+SocialIndicator=Social indicator
+SocialIndicators=Social indicators
 SolvingProblems=Solving problems
 Source=Source
 SourceFileDeleteQuestion=Do you really want to delete this file?
@@ -546,6 +559,7 @@ UnitAlreadyExistsInUnitGroup=Unit already exists in unit group {0}
 UnitGroup=Unit group
 UnitGroups=Unit groups
 UnitMappingPage_Description=Please select the flow property to which a unit should belong for the import process, and assign a conversion factor if unit is new.
+UnitOfMeasurement=Unit of measurement
 UnitProcess=Unit process
 Units=Units
 UnitsAndFlowProperties=Units and flow properties
