--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,5 +1,6 @@
-#Mon Dec 15 12:34:01 CET 2014
+#Wed Aug 26 12:29:55 CEST 2015
 AccessAndUseRestrictions=Auflagen zum Zugang und zur Nutzung
+ActivityVariable=Aktivit\u00E4tsvariable
 Actor=Kontakt
 Actors=Kontakte
 Add=Hinzuf\u00FCgen
@@ -57,6 +58,7 @@ Collapse=zusammenklappen
 CollapseAll=Alle einklappen
 ColumnSeparator=Spalten-Trennzeichen
 Comma=Komma
+Comment=Kommentar
 Complete=Vollst\u00E4ndig
 CompleteReferenceData=Alle Referenzdaten
 Component=Komponente
@@ -111,6 +113,7 @@ DataCollectionPeriod=Zeitraum der Datensammlung
 DataCompleteness=Datenvollst\u00E4ndigkeit
 DataDocumentor=Datendokumentierer
 DataGenerator=Datenerzeuger
+DataQuality=Datenqualit\u00E4t
 DataSelection=Datenauswahl
 DataSetOtherEvaluation=Andere Bewertungen des Datensatzes
 DataSetOwner=Datensatzbesitzer
@@ -163,7 +166,8 @@ English=Englisch
 Error=Fehler
 ErrorPopupMessage=Bitte sehen Sie die Log-Datei ein, um weitere Informationen zu erhalten
 ErrorPopupTitle=Ein unerwarteter Fehler ist aufgetreten
-EvaluateLocations=Für bestehende Orte auswerten
+EvaluateLocations=F\u00FCr bestehende Orte auswerten
+EvaluationScheme=Bewertungsschema
 Example=Beispiel
 ExcelExport=Excel Export
 Expand=vergr\u00F6\u00DFern
@@ -338,6 +342,7 @@ NewProcess=Neuer Prozess
 NewProductSystem=Neues Produktsystem
 NewProject=Neues Projekt
 NewSection=Neuer Abschnitt
+NewSocialIndicator=Neuer sozialer Indikator
 NewSource=Neue Quelle
 NewUnitGroup=Neue Einheitengruppe
 No=Nein
@@ -425,7 +430,9 @@ Projects=Projekte
 Properties=Eigenschaften
 Publication=Ver\u00F6ffentlichung
 QuantitativeReference=Quantitative Referenz
+Quantity=Gr\u00F6\u00DFe
 QuickResults=Schnelle Ergebnisse
+RawValue=Urspr\u00FCnglicher Wert
 ReconnectProcesslink=Prozessverbindung \u00E4ndern
 Reference=Referenz
 ReferenceFlowProperty=Referenzflusseigenschaft
@@ -457,6 +464,7 @@ Results=Ergebnisse
 ResultsOf=Ergebnisse f\u00FCr
 ResultsOfProject=Ergebnisse des Projekts\:
 Reviewer=Gutachter
+RiskLevel=Risikolevel
 Route=Route
 RunCalculation=Berechnung starten
 SamplingProcedure=Verfahren der Datenerhebung
@@ -501,6 +509,11 @@ SingleAmount=Einzelbeitrag
 SingleScore=Single Score
 SingleScoreBarChart=Single-Score - Balkendiagramm
 SingleScoreTable=Single-Score - Tabelle
+SocialAspect=Sozialer Aspekt
+SocialAspects=Soziale Aspekte
+SocialAssessment=Soziale Bewertung
+SocialIndicator=Sozialer Indikator
+SocialIndicators=Soziale Indikatoren
 SolvingProblems=L\u00F6se Probleme
 Source=Quellen
 SourceFileDeleteQuestion=M\u00F6chten Sie diese Datei wirklich l\u00F6schen?
@@ -543,6 +556,7 @@ UnitAlreadyExistsInUnitGroup=Einheit existiert bereits in Einheitengruppe {0}
 UnitGroup=Einheitengruppe
 UnitGroups=Einheitengruppen
 UnitMappingPage_Description=Bitte w\u00E4hlen Sie die Flusseigenschaft, zu der eine Einheit w\u00E4hrend des Imports zugeordnet werden soll und teilen Sie ihr, falls nicht vorhanden, einen Konvertierungsfaktor zu.
+UnitOfMeasurement=Einheit
 UnitProcess=Unit-Prozess
 Units=Einheiten
 UnitsAndFlowProperties=Einheiten und Flusseigenschaften
