--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Mon Dec 15 12:34:01 CET 2014
+#Wed Aug 26 12:29:55 CEST 2015
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 Actor=Acteur
 Actors=Acteurs
