--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Thu Jan 15 17:31:07 CET 2015
+#Wed Aug 26 12:29:55 CEST 2015
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 Actor=Autore
 Actors=Autori
