--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Wed Dec 17 19:21:26 CET 2014
+#Wed Aug 26 12:29:55 CEST 2015
 AccessAndUseRestrictions=Restricciones de acceso y uso
 Actor=Actor
 Actors=Actores
