--- a/olca-app/src/org/openlca/app/messages_zh.properties
+++ b/olca-app/src/org/openlca/app/messages_zh.properties
@@ -1,4 +1,4 @@
-#Mon Dec 15 12:34:01 CET 2014
+#Wed Aug 26 12:29:55 CEST 2015
 AccessAndUseRestrictions=\u5B58\u53D6\u548C\u9650\u5236
 Actor=\u884C\u52A8\u8005
 Actors=\u884C\u52A8\u8005\u4EEC
