Refactored locations and global parameters to be CategorizedRootEntity; added editors and wizards

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -94,6 +94,8 @@ CreatesANewActor=Creates a new actor
 CreatesANewFlow=Creates a new flow
 CreatesANewFlowProperty=Creates a new flow property
 CreatesANewImpactMethod=Creates a new impact method
+CreatesANewLocation=Creates a new location
+CreatesANewParameter=Creates a new parameter
 CreatesANewProductSystem=Creates a new product system
 CreatesANewProject=Creates a new project
 CreatesANewSource=Creates a new source
@@ -338,6 +340,8 @@ NewFlowProperty=New flow property
 NewImpactCategory=New impact category
 NewImpactMethod=New impact assessment method
 NewLCIAMethod=New LCIA method
+NewLocation=New location
+NewParameter=New parameter
 NewProcess=New process
 NewProductSystem=New product system
 NewProject=New project
