Refactored label json diff editor classes, including label providing. Added label mapping (property to real label). Added images for references. Added styled text feature.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -115,7 +115,7 @@ DataCollectionPeriod=Data collection period
 DataCompleteness=Data completeness
 DataDocumentor=Data documentor
 DataGenerator=Data generator
-DataQuality=DataQuality
+DataQuality=Data quality
 DataSelection=Data selection
 DataSetOtherEvaluation=Data set other evaluation
 DataSetOwner=Data set owner
