Refactored ilcd network preference page to be more general and added ILCD option to set preferred language. Also corrected selection in wizards (select file when it makes sense instead of directory)

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -11,8 +11,7 @@ FlowProperties=Flow properties
 FlowPropertyEditor=Flow property editor
 Flows=Flows
 GlobalParameters=Global parameters
-ILCD=ILCD
-ILCDNetwork=ILCD Network 
+ImportExport=I/O
 ILCDNetworkExport=ILCD Network Export
 ILCDNetworkImport=ILCD Network Import
 ImpactMethodEditor=Impact method editor
