--- a/olca-app/OSGI-INF/l10n/bundle_de.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_de.properties
@@ -11,8 +11,7 @@ FlowProperties=Flusseigenschaften
 FlowPropertyEditor=Flusseigenschafteneditor
 Flows=Fl\u00FCsse
 GlobalParameters=Globale Parameter
-ILCD=ILCD
-ILCDNetwork=ILCD-Netzwerk
+ImportExport=I/O
 ILCDNetworkExport=ILCD Netzwerk-Export
 ILCDNetworkImport=ILCD Netzwerk-Import
 ImpactMethodEditor=Editor f\u00FCr Methoden der Wirkungsabsch\u00E4tzung
