--- a/olca-app/OSGI-INF/l10n/bundle_es.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_es.properties
@@ -11,8 +11,7 @@ FlowProperties=Propiedades de flujo
 FlowPropertyEditor=Editor de propiedades de flujo
 Flows=Flujos
 GlobalParameters=Par\u00E1metros globales
-ILCD=ILCD
-ILCDNetwork=Red ILCD
+ImportExport=I/O
 ILCDNetworkExport=Exportar Red ILCD
 ILCDNetworkImport=Importar Red ILCD
 ImpactMethodEditor=Editor de m\u00E9todo de evaluaci\u00F3n de impacto
