--- a/olca-app/OSGI-INF/l10n/bundle_fr.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_fr.properties
@@ -11,8 +11,7 @@ FlowProperties=Propri\u00E9t\u00E9s du flux
 FlowPropertyEditor=Editeur de propri\u00E9t\u00E9 de flux
 Flows=Flux
 GlobalParameters=Param\u00E8tres globaux
-ILCD=ILCD
-ILCDNetwork=R\u00E9seau ILCD
+ImportExport=I/O
 ILCDNetworkExport=Export r\u00E9seau ILCD
 ILCDNetworkImport=Import r\u00E9seau ILCD
 ImpactMethodEditor=Editeur de m\u00E9thode d'impact
