Adjusted labels fof I/O preference page and added groups

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -11,7 +11,7 @@ FlowProperties=Flow properties
 FlowPropertyEditor=Flow property editor
 Flows=Flows
 GlobalParameters=Global parameters
-ImportExport=I/O
+ImportExport=Import/Export
 ILCDNetworkExport=ILCD Network Export
 ILCDNetworkImport=ILCD Network Import
 ImpactMethodEditor=Impact method editor
