--- a/olca-app/OSGI-INF/l10n/bundle_es.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_es.properties
@@ -11,7 +11,7 @@ FlowProperties=Propiedades de flujo
 FlowPropertyEditor=Editor de propiedades de flujo
 Flows=Flujos
 GlobalParameters=Par\u00E1metros globales
-ImportExport=I/O
+ImportExport=Import/Export
 ILCDNetworkExport=Exportar Red ILCD
 ILCDNetworkImport=Importar Red ILCD
 ImpactMethodEditor=Editor de m\u00E9todo de evaluaci\u00F3n de impacto
