--- a/olca-app/OSGI-INF/l10n/bundle_it.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_it.properties
@@ -11,7 +11,7 @@ FlowProperties=Propriet\u00E0 del flusso
 FlowPropertyEditor=Edita propriet\u00E0 del flusso
 Flows=Flussi
 GlobalParameters=Parametri globali
-ImportExport=I/O
+ImportExport=Import/Export
 ILCDNetworkExport=Esporta su ILCD Network
 ILCDNetworkImport=Importa da ILCD Network
 ImpactMethodEditor=Edita metodo di valutazione degli impatti
