--- a/olca-app/OSGI-INF/l10n/bundle_zh.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_zh.properties
@@ -11,7 +11,7 @@ FlowProperties=\u6D41\u52A8\u7684\u7279\u6027
 FlowPropertyEditor=\u6D41\u52A8\u7279\u6027\u7F16\u8F91
 Flows=\u6D41\u52A8
 GlobalParameters=\u5168\u7403\u53C2\u6570
-ImportExport=I/O
+ImportExport=Import/Export
 ILCDNetworkExport=\u5411 ILCD  \u8F93\u51FA
 ILCDNetworkImport=\u4ECE ILCD \u7F51\u7EDC\u8F93\u5165
 ImpactMethodEditor=\u5F71\u54CD\u6CD5\u7F16\u8F91
