Externalized string values into M class

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -28,6 +28,7 @@ ProductFlows=Product flows
 ProductSystemEditor=Product system editor
 ProductSystems=Product systems
 ProjectEditor=Project editor
+ReportViewer=Report viewer
 SourceEditor=Source editor
 Sources=Sources
 UnitGroupEditor=Unit group editor
