Smaller bug fixes in UI

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -708,12 +708,9 @@ Test=Test
 TestDistribution=Test distribution
 TexchnologyMatrix=Technology matrix
 Text=Text
-TextDropComponent_ToolTipText=Drag a selected object from 
-the navigation view into the 
-text field or click to open a 
-dialog.
+TextDropComponent_ToolTipText=Drag a selected object from the navigation view into the text field or click to open a dialog.
 TextReference=Text reference
-ThereIsNoShapefileParameterSelectedThatCouldBeAddedAsMethodParameter=There is no shapefile parameter selected that could be added as method parameter
+NoShapefileParameterSelected=There is no shapefile parameter selected that could be added as method parameter
 Time=Time
 TimeAndAuthor=Time and author
 TimeDescription=Time description
