Fixed issue when deleting linked shape file parameters

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -578,6 +578,7 @@ QuantitativeReference=Quantitative reference
 Quantity=Quantity
 QuickResults=Quick results
 RawValue=Raw value
+ReallyDeleteShapeFile=Do you really want to delete the selected shape file? All changes will be saved automatically
 RecalculateQuestion=Values will be recalculated, do you want to proceed?
 RecalculateQuestionText=Do you want the default value and uncertainty to be recalculated with the selected data source?
 RecalculateQuestionTitle=Recalculate
