--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -3,22 +3,21 @@ subtitle=Version 1.5.0 (Windows 64bit)
 subtext=Professional and powerful Life Cycle Assessments (LCA) and sustainability assessment software. Open Source: Licenced under the Mozilla Public Licence 2.0. Created and maintained since 2006 by GreenDelta, Berlin
 whatsNew.title=What's new?
 whatsNew.description=For the 1.5 version, we restructured the software and implemented new features to make openLCA more user-friendly and even more powerful:
-whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong> as experimental feature
-whatsNew.bulletpoint2=New and better <strong>structure of database elements</strong>
-whatsNew.bulletpoint3=Numerous  <strong>smaller improvements and bug fixes</strong>
-whatsNew.description=For the 1.5 version, we restructured the software and implemented new features to make openLCA more user-friendly and even more powerful:
-whatsNew.findOutMore=Find out in more detail what is new in version 1.5 <a href=\"http://www.openlca.org/news#New_1_5_0\">here</a>
+whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong>
+whatsNew.bulletpoint2=New and better <strong>structure of database elements</strong> including new icons
+whatsNew.bulletpoint3=Several <strong>smaller improvements and bug fixes</strong>
+whatsNew.findOutMore=Find out in more detail what is new in version 1.5 <a href="http://www.openlca.org/news#New_1_5_0">here</a>
 gettingStarted.title=Getting started
 gettingStarted.description=For first-time users: To use openLCA, you need to prepare two things:
-gettingStarted.bulletpoint1=Choose a <strong>database</strong> from <a href=\"https://nexus.openlca.org\">openLCA Nexus</a> and import it into openLCA
-gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a href=\"http://www.openlca.org/downloads\">openLCA website</a> and import then into the database
+gettingStarted.bulletpoint1=Choose a <strong>database</strong> from <a href="https://nexus.openlca.org">openLCA Nexus</a> and import it into openLCA. You can also start with an empty database and create your own data sets.
+gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a href="http://www.openlca.org/downloads">openLCA website</a> and import then into the database
 gettingStarted.note=Now you have everything to start your LCA study!
-gettingStarted.explanatoryVideo=How to import a database and methods into openLCA is shown in this <a href=\"https://www.youtube.com/watch?v=FqVMbwhAEW4')\">video</a>
+gettingStarted.explanatoryVideo=How to import a database and methods into openLCA is shown in this <a href="https://www.youtube.com/watch?v=FqVMbwhAEW4')">video</a>
 manuals.title=Manuals & Case studies
-manuals.description=Find out more on how to work with openLCA in our <a href=\"http://www.openlca.org/manuals\">user manuals</a>. These illustrate the most basic features and functions as well as offer comprehensive information on more advanced topics.
-manuals.instructionalVideos=See also our <a href=\"https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w\">instructional videos</a> that explain and demonstrate specific subjects.
+manuals.description=Find out more on how to work with openLCA in our <a href="http://www.openlca.org/manuals">user manuals</a>. These illustrate the most basic features and functions as well as offer comprehensive information on more advanced topics. You can also have a look to our <a href="http://www.openlca.org/case_studies" target="_blank">case studies</a> for inspiration on how to model you system.
+manuals.instructionalVideos=See also our <a href="https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w">instructional videos</a> that explain and demonstrate specific subjects.
 community.title=Community
-community.description=An increasing number of people are using openLCA. Find out more about the openLCA network and its users <a href=\"'http://www.openlca.org/network'\">here</a>.
-community.note=The source code of openLCA is hosted on <a href=\"https://github.com/GreenDelta\">Github</a>
+community.description=An increasing number of people are using openLCA. From universities to corporations to consultancies as well as institutions of every kind and size, from all over the world. Find out more about the openLCA network and its users <a href="'http://www.openlca.org/network'">here</a>.
+community.note=The source code of openLCA is hosted on <a href="https://github.com/GreenDelta">Github</a>
 community.followUs=Follow us on Twitter!
 community.becomeMember=Become a member of our LinkedIn group
