--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -14,7 +14,7 @@ gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a
 gettingStarted.note=Now you have everything to start your LCA study!
 gettingStarted.explanatoryVideo=How to import a database and methods into openLCA is shown in this <a href="https://www.youtube.com/watch?v=FqVMbwhAEW4')">video</a>
 manuals.title=Manuals & Case studies
-manuals.description=Find out more on how to work with openLCA in our <a href="http://www.openlca.org/manuals">user manuals</a>. These illustrate the most basic features and functions as well as offer comprehensive information on more advanced topics. You can also have a look to our <a href="http://www.openlca.org/case_studies" target="_blank">case studies</a> for inspiration on how to model you system.
+manuals.description=Find out more on how to work with openLCA in our <a href="http://www.openlca.org/manuals">user manuals</a>. These illustrate the most basic features and functions as well as offer comprehensive information on more advanced topics. You can also have a look to our <a href="http://www.openlca.org/case_studies">case studies</a> for inspiration on how to model you system.
 manuals.instructionalVideos=See also our <a href="https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w">instructional videos</a> that explain and demonstrate specific subjects.
 community.title=Community
 community.description=An increasing number of people are using openLCA. From universities to corporations to consultancies as well as institutions of every kind and size, from all over the world. Find out more about the openLCA network and its users <a href="'http://www.openlca.org/network'">here</a>.
