updated messages; location code + refID on location creation

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -175,8 +175,9 @@ DBImportVersionNewerMessage=The version of the source database is newer than thi
 DecimalSeparator=Decimal separator
 DefaultFlowProperty=Default flow property
 DefaultMethod=Default method
-DefaultProvider=Default provider
+DefaultProvider=Provider
 Delete=Delete
+
 DeleteCategoryQuestion=Do you really want to delete the selected category?
 DeleteDatabase=Delete database
 DeleteDatabaseParameterQuestion=Do you really want to delete the selected parameter from the database?
@@ -267,7 +268,7 @@ FilterByName=Filter by name
 FixedCosts=Fixed costs
 Flow=Flow
 FlowCategory=Flow category
-FlowContributions=Flow contributions
+FlowContributions=Contributions to flow results
 FlowProperties=Flow properties
 FlowProperty=Flow property
 FlowPropertyIsUsed=The given flow property is used in processes or impact methods.
@@ -326,7 +327,7 @@ ImpactAssessmentMethods=Impact assessment methods
 ImpactAssessmentResults=Impact assessment results
 ImpactCategories=Impact categories
 ImpactCategory=Impact category
-ImpactContributions=Impact contributions
+ImpactContributions=Contributions to impact category results
 ImpactFactor=Impact factor
 ImpactFactors=Impact factors
 ImpactResult=Impact result
