Updated start page

--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -1,6 +1,8 @@
 title=Welcome to openLCA!
 subtitle=Version 1.5.0 (Windows 64bit)
-subtext=Professional and powerful Life Cycle Assessments (LCA) and sustainability assessment software. Open Source: Licenced under the Mozilla Public Licence 2.0. Created and maintained since 2006 by GreenDelta, Berlin
+subtext.first=Professional and powerful Life Cycle Assessments (LCA) and sustainability assessment software. 
+subtext.second=Open Source: Licenced under the Mozilla Public Licence 2.0. 
+subtext.third=Created and maintained since 2006 by GreenDelta, Berlin
 whatsNew.title=What's new?
 whatsNew.description=For the 1.5 version, we restructured the software and implemented new features to make openLCA more user-friendly and even more powerful:
 whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong>
@@ -10,7 +12,7 @@ whatsNew.findOutMore=Find out in more detail what is new in version 1.5 <a href=
 gettingStarted.title=Getting started
 gettingStarted.description=For first-time users: To use openLCA, you need to prepare two things:
 gettingStarted.bulletpoint1=Choose a <strong>database</strong> from <a href="https://nexus.openlca.org">openLCA Nexus</a> and import it into openLCA. You can also start with an empty database and create your own data sets.
-gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a href="http://www.openlca.org/downloads">openLCA website</a> and import then into the database
+gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a href="http://www.openlca.org/downloads">openLCA website</a> and import them into the database
 gettingStarted.note=Now you have everything to start your LCA study!
 gettingStarted.explanatoryVideo=How to import a database and methods into openLCA is shown in this <a href="https://www.youtube.com/watch?v=FqVMbwhAEW4">video</a>
 manuals.title=Manuals & Case studies
