added missing translation keys + new splash

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -779,4 +779,6 @@ Window=&Window
 WithPassword=With password
 Year=Year
 Yes=Yes
-ZipCode=Zip code
+ZipCode=Zip code
+ApplyFormatToInputsOutputs=Apply format to inputs/outputs in process editor
+ReallyDeleteShapeFile=Do you really want to delete the selected shape file? All changes will be saved automatically.
