Fixed some ui issues in start page

--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -21,5 +21,4 @@ manuals.instructionalVideos=See also our <a href="https://www.youtube.com/channe
 community.title=Community
 community.description=An increasing number of people are using openLCA. From universities to corporations to consultancies as well as institutions of every kind and size, from all over the world. Find out more about the openLCA network and its users <a href="http://www.openlca.org/network">here</a>.
 community.note=The source code of openLCA is hosted on <a href="https://github.com/GreenDelta">Github</a>
-community.followUs=Follow us on Twitter!
-community.becomeMember=Become a member of our LinkedIn group
+community.socialMedia=Follow us on Twitter or become a member of our LinkedIn group!
