updated translation messages from server

--- a/olca-app-html/src/start_page/msg/messages_ca.properties
+++ b/olca-app-html/src/start_page/msg/messages_ca.properties
@@ -1,7 +1,6 @@
-community.becomeMember=Fes-te membre del nostre grup de Linkedin
 community.description=Cada cop més persones utilitzen openLCA. Des d'universitats fins a corporacions i consultories, així com institucions de tots tipus i mides, arreu del món. Descobreix més sobre la xarxa openLCA i els seus usuaris <a href="http://www.openlca.org/network">aquí</a>.
-community.followUs=Segueix-nos a Twitter!
 community.note=El codi font d'openLCA està penjat a <a href="https://github.com/GreenDelta">Github</a>.
+community.socialMedia=
 community.title=Comunitat
 gettingStarted.bulletpoint1=Tria una <strong>base de dades</strong> d'<a href="https://nexus.openlca.org">openLCA Nexus</a> i importa-la a openLCA. També pots començar una base de dades buida i crear els teus propis conjunts de dades.
 gettingStarted.bulletpoint2=Descarrega <strong>mètodes d'analisi d'impacte</strong> de la web d' <a href="http://www.openlca.org/downloads">openLCA website</a> i importa'ls a la base de dades.
