--- a/olca-app-html/src/start_page/msg/messages_es.properties
+++ b/olca-app-html/src/start_page/msg/messages_es.properties
@@ -2,6 +2,7 @@ community.becomeMember=Conviértete en miembro de nuestro grupo de Linkedin
 community.description=Cada vez más gente utiliza openLCA, incluyendo tanto universidades y corporaciones, como consultorías e instituciones de todo tipo y tamaño de todo el mundo. Descubre más sobre la red openLCA y sus usuarios <a href="http://www.openlca.org/network">aquí</a>.
 community.followUs=¡Síguenos en Twitter!
 community.note=El código fuente de openLCA está disponible en <a href="https://github.com/GreenDelta">Github</a>.
+community.socialMedia=¡Síguenos en Twitter o conviértete en miembro de nuestro grupo de LinkedIn!
 community.title=Comunidad
 gettingStarted.bulletpoint1=Elige una <strong>base de datos</strong> en <a href="https://nexus.openlca.org">openLCA Nexus</a> e impórtala en openLCA. También puedes comenzar con una base de datos vacía y crear tus propios conjuntos de datos.
 gettingStarted.bulletpoint2=Descarga los <strong>métodos de evaluación de impacto</strong> desde la <a href="http://www.openlca.org/downloads">página web de openLCA</a> e impórtalos en la base de datos.
