--- a/olca-app/OSGI-INF/l10n/bundle_de.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_de.properties
@@ -1,22 +1,21 @@
-#Mon Dec 15 12:37:59 CET 2014
 ActorEditor=Kontakteditor
 Actors=Kontakte
 Configuration=Einstellungen
 DataProvider=Datenprovider
 EcoSpold=EcoSpold
-ElementaryFlows=Elementarfl\u00FCsse
+ElementaryFlows=Elementarfl\u00fcsse
 EmptyCategories=Leere Kategorien
 FlowEditor=Flusseditor
 FlowProperties=Flusseigenschaften
 FlowPropertyEditor=Flusseigenschafteneditor
-Flows=Fl\u00FCsse
+Flows=Fl\u00fcsse
 GlobalParameters=Globale Parameter
-ImportExport=Import/Export
 ILCDNetworkExport=ILCD Netzwerk-Export
 ILCDNetworkImport=ILCD Netzwerk-Import
-ImpactMethodEditor=Editor f\u00FCr Methoden der Wirkungsabsch\u00E4tzung
-ImpactMethods=Wirkungsabsch\u00E4tzungsmethoden
-LCIAMethods=LCIA Methoden
+ImpactMethodEditor=Editor f\u00fcr Wirkungsabsch\u00e4tzungsmethoden
+ImpactMethods=Wirkungsabsch\u00e4tzungsmethoden
+ImportExport=Import/Export
+LCIAMethods=Wirkungsabsch\u00e4tzungsmethoden
 Locations=Orte
 Logging=Logging
 Navigation=Navigation
@@ -24,15 +23,16 @@ NumberFormat=Zahlenformat
 Perspective=Perspektive
 ProcessEditor=Prozesseditor
 Processes=Prozesse
-ProductFlows=Produktfl\u00FCsse
+ProductFlows=Produktfl\u00fcsse
 ProductSystemEditor=Produktsystemeditor
 ProductSystems=Produktsysteme
 ProjectEditor=Projekteditor
+ReportViewer=Bericht
 SourceEditor=Quelleneditor
 Sources=Quellen
-UnitGroupEditor=Editor f\u00FCr Einheitengruppen
+UnitGroupEditor=Editor f\u00fcr Einheitengruppen
 UnitGroups=Einheitengruppen
 Updates=Aktualisierungen
 Usage=Verwendung
-WasteFlows=Abfallfl\u00FCsse
+WasteFlows=Abfallfl\u00fcsse
 Welcome=Willkommen
