--- a/olca-app/OSGI-INF/l10n/bundle_es.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_es.properties
@@ -1,26 +1,25 @@
-#Fri Dec 05 15:11:17 CET 2014
 ActorEditor=Editor de actor
 Actors=Actores
-Configuration=Configuraci\u00F3n
+Configuration=Configuraci\u00f3n
 DataProvider=Proveedor de datos
 EcoSpold=EcoSpold 1
 ElementaryFlows=Flujos elementales
-EmptyCategories=Categor\u00EDas vac\u00EDas
+EmptyCategories=Categor\u00edas vac\u00edas
 FlowEditor=Editor de flujo
 FlowProperties=Propiedades de flujo
 FlowPropertyEditor=Editor de propiedades de flujo
 Flows=Flujos
-GlobalParameters=Par\u00E1metros globales
-ImportExport=Import/Export
+GlobalParameters=Par\u00e1metros globales
 ILCDNetworkExport=Exportar Red ILCD
 ILCDNetworkImport=Importar Red ILCD
-ImpactMethodEditor=Editor de m\u00E9todo de evaluaci\u00F3n de impacto
-ImpactMethods=M\u00E9todos de impacto
-LCIAMethods=M\u00E9todos de EICV
+ImpactMethodEditor=Editor de m\u00e9todo de evaluaci\u00f3n de impacto
+ImpactMethods=M\u00e9todos de impacto
+ImportExport=Import/Export
+LCIAMethods=M\u00e9todos de EICV
 Locations=Ubicaciones
 Logging=Registro
-Navigation=Navegaci\u00F3n
-NumberFormat=Formato de n\u00FAmero
+Navigation=Navegaci\u00f3n
+NumberFormat=Formato de n\u00famero
 Perspective=Perspectiva
 ProcessEditor=Editor de proceso
 Processes=Procesos
@@ -28,6 +27,7 @@ ProductFlows=Flujos de producto
 ProductSystemEditor=Editor de sistema de producto
 ProductSystems=Sistemas de producto
 ProjectEditor=Editor de proyecto
+ReportViewer=Vista de informe
 SourceEditor=Editor de fuente
 Sources=Fuentes
 UnitGroupEditor=Editor de grupo de unidad
