--- a/olca-app/OSGI-INF/l10n/bundle_it.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_it.properties
@@ -1,4 +1,3 @@
-#Thu Jan 15 16:01:32 CET 2015
 ActorEditor=Edita autore
 Actors=Autori
 Configuration=Configurazione
@@ -7,15 +6,15 @@ EcoSpold=EcoSpold 1
 ElementaryFlows=Flussi elementari
 EmptyCategories=Categorie vuote
 FlowEditor=Edita flusso
-FlowProperties=Propriet\u00E0 del flusso
-FlowPropertyEditor=Edita propriet\u00E0 del flusso
+FlowProperties=Propriet\u00e0 del flusso
+FlowPropertyEditor=Edita propriet\u00e0 del flusso
 Flows=Flussi
 GlobalParameters=Parametri globali
-ImportExport=Import/Export
 ILCDNetworkExport=Esporta su ILCD Network
 ILCDNetworkImport=Importa da ILCD Network
 ImpactMethodEditor=Edita metodo di valutazione degli impatti
 ImpactMethods=Metodi di valutazione degli impatti
+ImportExport=Import/Export
 LCIAMethods=Metodi LCIA
 Locations=Localizzazioni
 Logging=Logging
@@ -28,10 +27,11 @@ ProductFlows=Flussi di prodotto
 ProductSystemEditor=Edita sistema prodotto
 ProductSystems=Sistemi prodotto
 ProjectEditor=Edita progetto
+ReportViewer=Visualizzatore del report
 SourceEditor=Edita fonte
 Sources=Fonti
-UnitGroupEditor=Edita gruppo di unit\u00E0
-UnitGroups=Gruppi di unit\u00E0
+UnitGroupEditor=Edita gruppo di unit\u00e0
+UnitGroups=Gruppi di unit\u00e0
 Updates=Aggiornamenti
 Usage=Utilizzo
 WasteFlows=Flussi di rifiuti
