--- a/olca-app/OSGI-INF/l10n/bundle_pt.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_pt.properties
@@ -1,39 +1,38 @@
-#Tue Jan 12 16:10:08 BRST 2016
 ActorEditor=Ator Editor
 Actors=Ator
-Configuration=Configura\u00E7\u00E3o
-DataProvider=provedor de dados
+Configuration=Configura\u00e7\u00e3o
+DataProvider=Provedor de dados
 EcoSpold=EcoSpold 1
 ElementaryFlows=Fluxo elementar
 EmptyCategories=Categoria de impacto
-FlowEditor=Editor Fluxo
+FlowEditor=Editor fluxo
 FlowProperties=Propriedade de fluxo
-FlowPropertyEditor=Editor Propriedade de fluxo
+FlowPropertyEditor=Editor propriedade de fluxo
 Flows=Fluxo
-GlobalParameters=Par\u00E2metro global
-ILCD=ILCD
-ILCDNetwork=Rede ILCD
+GlobalParameters=Par\u00e2metro global
 ILCDNetworkExport=Exportar para rede ILCD
 ILCDNetworkImport=Importar para rede ILCD
-ImpactMethodEditor=Editor m\u00E9todo de impacto
-ImpactMethods=M\u00E9todo de impacto
-LCIAMethods=M\u00E9todo AICV
-Locations=Localiza\u00E7\u00E3o
+ImpactMethodEditor=Editor m\u00e9todo de impacto
+ImpactMethods=M\u00e9todo de impacto
+ImportExport=Importar/Exportar
+LCIAMethods=M\u00e9todo AICV
+Locations=Localiza\u00e7\u00e3o
 Logging=Corte
-Navigation=Navega\u00E7\u00E3o
-NumberFormat=Formato n\u00FAmero
+Navigation=Navega\u00e7\u00e3o
+NumberFormat=Formato n\u00famero
 Perspective=Perspectiva
 ProcessEditor=Editor Processo
 Processes=Processos
 ProductFlows=Fluxo do produto
-ProductSystemEditor=Editor Sistema de produto
+ProductSystemEditor=Editor sistema de produto
 ProductSystems=Produto de sistema
 ProjectEditor=Editor Projeto
+ReportViewer=Visualizar relat\u00f3rio
 SourceEditor=Editor Fonte
-Sources=Fonte
-UnitGroupEditor=Editor Unidade de grupo
-UnitGroups=Unidade de grupos
-Updates=Atualiza\u00E7\u00E3o
+Sources=Fontes
+UnitGroupEditor=Editor de unidade de grupo
+UnitGroups=Unidades de grupo
+Updates=Atualiza\u00e7\u00e3o
 Usage=Uso
-WasteFlows=Fluxo de res\u00EDduos
-Welcome=Bem vindo\!
+WasteFlows=Fluxo de res\u00edduos
+Welcome=Bem vindo!
