--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -23,6 +23,7 @@ Amount=Cantidad
 Analysis=An\u00e1lisis
 AnalysisResultOf=An\u00e1lisis de resultado de
 AnalyzingForProblems=Detectando problemas
+ApplyFormatToInputsOutputs=Aplicar el formato a las entradas/salidas del editor de proceso
 AsDefinedInProcesses=Seg\u00fan se define en los procesos
 AssignUnits=Asignar unidades
 Author=Autor
@@ -66,7 +67,7 @@ CheckingAgainstLibraries=Comprobando con las librer\u00edas
 ChooseDirectory=Elegir directorio...
 City=Ciudad
 ClearData=Borrar datos
-ClickHereToChangeDisplay=Seleccione aqu\u00ed para cambiar la visualizaci\u00f3n
+ClickHereToChangeDisplay=Pulse aqu\u00ed para cambiar la visualizaci\u00f3n
 Close=Cerrar
 CloseDatabase=Cerrar base de datos
 Code=C\u00f3digo
@@ -99,6 +100,7 @@ Content=Contenido
 Context=Contexto
 Contribution=Contribuci\u00f3n
 ContributionTree=\u00c1rbol de contribuciones
+ContributionTreeLocations=\u00c1rbol de contribuciones por ubicaci\u00f3n
 ConversionFactor=Factor de conversi\u00f3n
 Copy=Copiar
 CopyAllFromRightToLeft=Copiar todo de la derecha a la izquierda
@@ -196,7 +198,12 @@ DependentParameters=Par\u00e1metros dependientes
 Description=Descripci\u00f3n
 DeveloperTools=Herramientas de programaci\u00f3n
 Diff=Fichero de diferencias
+Direct=Directos
 DirectContribution=Contribuci\u00f3n directa
+DirectContributionsFlowResults=Contribuciones directas a los resultados de flujo
+DirectContributionsFlowResultsOverview=Contribuciones directas a los resultados de flujo - resumen
+DirectContributionsImpactCategoryResults=Contribuciones directas a los resultados de categor\u00edas de impacto
+DirectContributionsImpactCategoryResultsOverview=Contribuciones directas a los resultados de categor\u00edas de impacto - resumen
 DirectImpact=Impacto directo
 Direction=Direcci\u00f3n
 DisconnectFromRepository=Desconectar del repositorio
@@ -268,6 +275,7 @@ FixedCosts=Costes fijos
 Flow=Flujo
 FlowCategory=Categor\u00eda de flujo
 FlowContributions=Contribuciones de flujo
+FlowContributionsToProcessResults=Contribuciones de flujo a los resultados de proceso
 FlowProperties=Propiedades de flujo
 FlowProperty=Propiedad de flujo
 FlowPropertyIsUsed=La propiedad de flujo seleccionada se usa en procesos o m\u00e9todos de evaluaci\u00f3n de impacto.
@@ -532,7 +540,7 @@ ParameterWithSameNameExistsInMethod=Un par\u00e1metro con el mismo nombre ya exi
 Password=Contrase\u00f1a
 Paste=Pegar
 PedigreeMatrix=Matriz Pedigree
-PedigreeMatrixMessage=Selecciona las celdas de la matriz para elegir entradas
+PedigreeMatrixMessage=Pulse en las celdas de la matriz para elegir entradas
 PedigreeUncertainty=Incertidumbre Pedigree
 Physical=F\u00edsico
 PhysicalAndEconomicAllocation=Asignaci\u00f3n f\u00edsica y econ\u00f3mica
@@ -577,6 +585,7 @@ QuantitativeReference=Referencia cuantitativa
 Quantity=Magnitud
 QuickResults=Resultados r\u00e1pidos
 RawValue=Valor de referencia
+ReallyDeleteShapeFile=\u00bfQuiere realmente eliminar el shapefile seleccionado? Todos los cambios se guardar\u00e1n autom\u00e1ticamente.
 RecalculateQuestion=Se van a recalcular los valores. \u00bfQuiere continuar?
 RecalculateQuestionText=\u00bfQuiere recalcular el valor por defecto y la incertidumbre con la fuente de datos seleccionada?
 RecalculateQuestionTitle=Recalcular
@@ -708,7 +717,7 @@ Test=Prueba
 TestDistribution=Distribuci\u00f3n de prueba
 TexchnologyMatrix=Matriz tecnol\u00f3gica
 Text=Texto
-TextDropComponent_ToolTipText=Arrastre un objeto seleccionado desde el men\u00fa de navegaci\u00f3n al campo de texto o cliquee para abrir un cuadro de di\u00e1logo.
+TextDropComponent_ToolTipText=Arrastre un objeto seleccionado desde el men\u00fa de navegaci\u00f3n al campo de texto o pulse para abrir un cuadro de di\u00e1logo.
 TextReference=Referencia de texto
 Time=Tiempo
 TimeAndAuthor=Hora y autor
@@ -749,7 +758,8 @@ UpdateMinorVersion=Actualizar versi\u00f3n menor
 UpdatePreferences=Actualizar preferencias
 UpdateReferenceCurrency=Actualizar divisa de referencia...
 UpdatingProductSystem=Actualizando sistema de producto
-UpstreamTotal=Total procesos previos
+UpstreamInclDirect=Total incl. procesos previos
+UpstreamTotal=Total incl. procesos previos
 UpToDate=Al d\u00eda - No hay cambios recuperados
 URL=URL
 Usage=Uso
