--- a/olca-app/OSGI-INF/l10n/bundle_zh.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_zh.properties
@@ -1,38 +1,38 @@
-#Mon Dec 15 12:37:59 CET 2014
-ActorEditor=\u884C\u52A8\u8005\u7F16\u8F91
-Actors=\u884C\u52A8\u8005
-Configuration=\u914D\u7F6E
-DataProvider=\u6570\u636E\u63D0\u4F9B\u65B9
+ActorEditor=\u57f7\u884c\u8005\u7de8\u8f2f
+Actors=\u57f7\u884c\u8005\u7de8\u8f2f
+Configuration=\u8a2d\u5b9a
+DataProvider=\u8cc7\u6599\u63d0\u4f9b\u8005
 EcoSpold=EcoSpold 1
-ElementaryFlows=\u57FA\u672C\u6D41\u52A8
-EmptyCategories=\u7A7A\u7C7B\u522B
-FlowEditor=\u6D41\u52A8\u7F16\u8F91
-FlowProperties=\u6D41\u52A8\u7684\u7279\u6027
-FlowPropertyEditor=\u6D41\u52A8\u7279\u6027\u7F16\u8F91
-Flows=\u6D41\u52A8
-GlobalParameters=\u5168\u7403\u53C2\u6570
-ImportExport=Import/Export
-ILCDNetworkExport=\u5411 ILCD  \u8F93\u51FA
-ILCDNetworkImport=\u4ECE ILCD \u7F51\u7EDC\u8F93\u5165
-ImpactMethodEditor=\u5F71\u54CD\u6CD5\u7F16\u8F91
-ImpactMethods=\u5F71\u54CD\u6CD5
-LCIAMethods=\u751F\u547D\u5468\u671F\u5F71\u54CD\u8BC4\u4EF7\u65B9\u6CD5
-Locations=\u5730\u65B9
-Logging=\u8BB0\u8F7D\u4FE1\u606F
-Navigation=\u5BFC\u822A
-NumberFormat=\u6570\u5B57\u683C\u5F0F
-Perspective=\u89C6\u91CE
-ProcessEditor=\u5DE5\u5E8F\u7F16\u8F91
-Processes=\u5DE5\u5E8F
-ProductFlows=\u4EA7\u54C1\u6D41\u52A8
-ProductSystemEditor=\u4EA7\u54C1\u7CFB\u7EDF\u7F16\u8F91
-ProductSystems=\u4EA7\u54C1\u7CFB\u7EDF
-ProjectEditor=\u8BA1\u5212\u7F16\u8F91
-SourceEditor=\u6765\u6E90\u7F16\u8F91
-Sources=\u6765\u6E90
-UnitGroupEditor=\u5355\u4F4D\u7FA4\u7F16\u8F91
-UnitGroups=\u5355\u4F4D\u7FA4
-Updates=\u66F4\u65B0
-Usage=\u7528\u6CD5
-WasteFlows=\u5E9F\u7269\u6D41\u52A8
-Welcome=\u6B22\u8FCE
+ElementaryFlows=\u5143\u7d20\u6d41\u7a0b
+EmptyCategories=\u7a7a\u985e\u5225
+FlowEditor=\u6d41\u7a0b\u7de8\u8f2f
+FlowProperties=\u6d41\u7a0b\u5c6c\u6027
+FlowPropertyEditor=\u6d41\u7a0b\u5c6c\u6027\u7de8\u8f2f
+Flows=\u6d41\u7a0b
+GlobalParameters=\u5168\u57df\u53c3\u6578
+ILCDNetworkExport=\u5f9e ILCD \u7db2\u8def\u532f\u51fa
+ILCDNetworkImport=\u5f9e ILCD \u7db2\u8def\u532f\u5165
+ImpactMethodEditor=\u5f71\u97ff\u65b9\u6cd5\u7de8\u8f2f
+ImpactMethods=\u5f71\u97ff\u65b9\u6cd5
+ImportExport=\u532f\u51fa/\u532f\u5165
+LCIAMethods=LCIA\u65b9\u6cd5
+Locations=\u4f4d\u7f6e
+Logging=\u7d00\u9304
+Navigation=\u5c0e\u89bd
+NumberFormat=\u6578\u5b57\u683c\u5f0f
+Perspective=\u900f\u8996
+ProcessEditor=\u7a0b\u5e8f\u7de8\u8f2f
+Processes=\u7a0b\u5e8f
+ProductFlows=\u7522\u54c1\u6d41\u7a0b
+ProductSystemEditor=\u7522\u54c1\u7cfb\u7d71\u7de8\u8f2f
+ProductSystems=\u7522\u54c1\u7cfb\u7d71
+ProjectEditor=\u5c08\u6848\u7de8\u8f2f
+ReportViewer=\u5831\u544a\u700f\u89bd\u8005
+SourceEditor=\u4f86\u6e90\u7de8\u8f2f
+Sources=\u4f86\u6e90
+UnitGroupEditor=\u55ae\u4f4d\u7fa4\u7d44\u7de8\u8f2f
+UnitGroups=\u55ae\u4f4d\u7fa4\u7d44
+Updates=\u66f4\u65b0
+Usage=\u7528\u6cd5
+WasteFlows=\u6d41\u7a0b\u6d6a\u8cbb
+Welcome=\u6b61\u8fce
