--- a/olca-app/src/org/openlca/app/messages_ar.properties
+++ b/olca-app/src/org/openlca/app/messages_ar.properties
@@ -1,19 +1,20 @@
 AcceptCommit=
-AccessAndUseRestrictions=
+AccessAndUseRestrictions=\u0645\u0648\u0627\u0646\u0639 \u0627\u0644\u0646\u0641\u0627\u0630 \u0648\u0627\u0644\u0627\u0633\u062a\u0639\u0645\u0627\u0644
 ActivityQuantity=
 ActivityUnit=
 ActivityVariable=
 Actor=\u0627\u0644\u0639\u0646\u0635\u0631
 Actors=\u0627\u0644\u0639\u0646\u0627\u0635\u0631
 Add=\u0623\u0636\u0641
-AddConnectedProcesses=
+AddConnectedProcesses=\u0623\u0636\u0641 \u0627\u0644\u0639\u0645\u0644\u064a\u0627\u062a
+\u0627\u0644\u0645\u062a\u0635\u0644\u0629
 AddedValue=
-AdditionalInformation=
+AdditionalInformation=\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0625\u0636\u0627\u0641\u064a\u0629
 AddNewChildCategory=
 Address=\u0627\u0644\u0639\u0646\u0648\u0627\u0646
 AddSection=\u0623\u0636\u0641 \u0645\u0642\u0637\u0639
 AddToMethodParameters=
-AdministrativeInformation=
+AdministrativeInformation=\u0645\u0639\u0644\u0648\u0645\u0627\u062a
 Allocation=\u062a\u0648\u0632\u064a\u0639
 AllocationFactors=
 AllocationMethod=\u0637\u0631\u064a\u0642\u0629 \u0627\u0644\u062a\u0648\u0632\u064a\u0639
@@ -23,6 +24,7 @@ Amount=\u0627\u0644\u0643\u0645\u064a\u0629
 Analysis=\u062f\u0631\u0627\u0633\u0629
 AnalysisResultOf=\u062f\u0631\u0627\u0633\u0629 \u0627\u0644\u0646\u062a\u064a\u062c\u0629
 AnalyzingForProblems=\u062f\u0631\u0627\u0633\u0629 \u0627\u0644\u0645\u0634\u0627\u0643\u0644
+ApplyFormatToInputsOutputs=
 AsDefinedInProcesses=
 AssignUnits=\u062a\u0639\u064a\u064a\u0646 \u0627\u0644\u0648\u062d\u062f\u0627\u062a
 Author=\u0627\u0644\u0645\u0624\u0644\u0641
@@ -99,6 +101,7 @@ Content=
 Context=
 Contribution=
 ContributionTree=
+ContributionTreeLocations=
 ConversionFactor=
 Copy=
 CopyAllFromRightToLeft=
@@ -196,7 +199,12 @@ DependentParameters=
 Description=
 DeveloperTools=
 Diff=
+Direct=
 DirectContribution=
+DirectContributionsFlowResults=
+DirectContributionsFlowResultsOverview=
+DirectContributionsImpactCategoryResults=
+DirectContributionsImpactCategoryResultsOverview=
 DirectImpact=
 Direction=
 DisconnectFromRepository=
@@ -268,6 +276,7 @@ FixedCosts=
 Flow=
 FlowCategory=
 FlowContributions=
+FlowContributionsToProcessResults=
 FlowProperties=
 FlowProperty=
 FlowPropertyIsUsed=
@@ -577,6 +586,7 @@ QuantitativeReference=
 Quantity=
 QuickResults=
 RawValue=
+ReallyDeleteShapeFile=
 RecalculateQuestion=
 RecalculateQuestionText=
 RecalculateQuestionTitle=
@@ -749,6 +759,7 @@ UpdateMinorVersion=
 UpdatePreferences=
 UpdateReferenceCurrency=
 UpdatingProductSystem=
+UpstreamInclDirect=
 UpstreamTotal=
 UpToDate=
 URL=
