--- a/olca-app/OSGI-INF/l10n/bundle_fr.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_fr.properties
@@ -1,38 +1,37 @@
-#Mon Dec 15 12:37:59 CET 2014
-ActorEditor=Acteur \u00E9diteur
+ActorEditor=Acteur \u00e9diteur
 Actors=Acteurs
 Configuration=Configuration
-DataProvider=Fournisseur de donn\u00E9es
+DataProvider=Fournisseur de donn\u00e9es
 EcoSpold=EcoSpold 1
-ElementaryFlows=Flux \u00E9l\u00E9mentaires
-EmptyCategories=Cat\u00E9gories vides
+ElementaryFlows=Flux \u00e9l\u00e9mentaires
+EmptyCategories=Cat\u00e9gories vides
 FlowEditor=Editeur de flux
-FlowProperties=Propri\u00E9t\u00E9s du flux
-FlowPropertyEditor=Editeur de propri\u00E9t\u00E9 de flux
+FlowProperties=Propri\u00e9t\u00e9s du flux
+FlowPropertyEditor=Editeur de propri\u00e9t\u00e9 de flux
 Flows=Flux
-GlobalParameters=Param\u00E8tres globaux
+GlobalParameters=Param\u00e8tres globaux
+ILCDNetworkExport=Export r\u00e9seau ILCD
+ILCDNetworkImport=Import r\u00e9seau ILCD
+ImpactMethodEditor=Editeur de m\u00e9thode d'impact
+ImpactMethods=M\u00e9thodes d'impact
 ImportExport=Import/Export
-ILCDNetworkExport=Export r\u00E9seau ILCD
-ILCDNetworkImport=Import r\u00E9seau ILCD
-ImpactMethodEditor=Editeur de m\u00E9thode d'impact
-ImpactMethods=M\u00E9thodes d'impact
-LCIAMethods=M\u00E9thodes d'\u00E9valuation des impacts du cycle de vie
+LCIAMethods=M\u00e9thodes d'\u00e9valuation des impacts du cycle de vie
 Locations=Emplacements
-Logging=Journaux d'\u00E9v\u00E8nements
+Logging=Journaux d'\u00e9v\u00e8nements
 Navigation=Navigation
 NumberFormat=Format des nombres
 Perspective=Perspective
-ProcessEditor=Editeur de proc\u00E9d\u00E9
-Processes=Proc\u00E9d\u00E9s
+ProcessEditor=Editeur de proc\u00e9d\u00e9
+Processes=Proc\u00e9d\u00e9s
 ProductFlows=Flux de produit
-ProductSystemEditor=Editeur de syst\u00E8me de produit
-ProductSystems=Syst\u00E8mes de produit
+ProductSystemEditor=Editeur de syst\u00e8me de produit
+ProductSystems=Syst\u00e8mes de produit
 ProjectEditor=Editeur de projet
 SourceEditor=Editeur de source
 Sources=Sources
-UnitGroupEditor=Editeur de groupe d'unit\u00E9s
-UnitGroups=Groupes d'unit\u00E9s
-Updates=Mises \u00E0 jour
+UnitGroupEditor=Editeur de groupe d'unit\u00e9s
+UnitGroups=Groupes d'unit\u00e9s
+Updates=Mises \u00e0 jour
 Usage=Utilisation
-WasteFlows=Flux de d\u00E9chets
+WasteFlows=Flux de d\u00e9chets
 Welcome=Bienvenue
