Updated reference check in commit action

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -80,7 +80,7 @@ Commit=Commit...
 CommitChangesToRepository=Commit changes to repository
 CommitingChanges=Commiting changes
 CommitMessage=Commit message
-CommitReferenceNotice=Referenced changes that need to be committed as well
+CommitReferenceNotice=Referenced changes that might be relevant to be committed as well
 ComparingWithRepository=Comparing with repository
 Complete=Complete
 CompleteReferenceData=Complete reference data
