Updated start page whats new bulletpoint 1 message

--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -17,7 +17,7 @@ subtext.second=Open Source: Licenced under the Mozilla Public Licence 2.0.
 subtext.third=Created and maintained since 2006 by GreenDelta, Berlin
 subtitle=Version 1.5.0 (Windows 64bit)
 title=Welcome to openLCA!
-whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong>
+whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong> & improved <strong>Life Cycle Costing</strong>
 whatsNew.bulletpoint2=New and better <strong>structure of database elements</strong> including new icons
 whatsNew.bulletpoint3=Several <strong>smaller improvements and bug fixes</strong>
 whatsNew.description=For the 1.5 version, we restructured the software and implemented new features to make openLCA more user-friendly and even more powerful:
